MDEV-26161 crash in Gis_point::calculate_haversine

return an error on invalid gis data